objects/Uplift__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_For__c</fullName>
        <label>Applicable For</label>
        <picklist>
            <picklistValues>
                <fullName>99-YR/Other Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIP Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RenMaint Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Access Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Access Selection Quote</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency_Exchange_Rate__c</referenceTo>
        <relationshipLabel>Uplift</relationshipLabel>
        <relationshipName>Uplift</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Uplift</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Uplift</label>
    <nameField>
        <label>Uplift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Uplift</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>